--- a/alecture/tsconfig.json
+++ b/alecture/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "sourceMap": true,
+    "esModuleInterop": true,   //import * as React from 'react';
+    "sourceMap": true, //error위치 확인
     "lib": ["ES2020", "DOM"],
     "jsx": "react",
     "module": "esnext",
     "moduleResolution": "Node",
     "target": "es5",
-    "strict": true,
+    "strict": true, //anyScript을 방지
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
